# cpp_projects

./: ImageLoader.cpp  MeshLoader.cpp  main.c
3dMath/: 3dMath.cpp  3dMath.h  main.cpp  mat4.h  quat.h  readme.md  vec2.h  vec3.h  vec4.h
PanoToolC/: full_rebuild.sh  partial_rebuild.sh
PanoToolC/src/: CMakeLists.txt
extended Image Loader/: Texture.cpp  Texture.h
for opengl/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
garbage/: shortcuts.cpp
graph_editor/: readme.txt
graph_editor/exe/: 1_log.txt  2.txt  2_log.txt
graph_editor/source_code/: main.cpp
lensModel/: Optics2dSFML_default.cpp  Optics2dSFML_parallel.cpp
opengl prj (temp)/: .gitignore  OpenGLprj.sln
opengl prj (temp)/OpenGLprj/: Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OpenGLprj.cpp  OpenGLprj.vcxproj  OpenGLprj.vcxproj.filters  Optics.cpp  Optics.h  ResourceManager.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
opengl prj (temp)/OpenGLprj/3dMath/: 3dMath.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
opengl prj ref (temp)/src/: CMakeLists.txt  Font.cpp  Font.h  Framebuffer.h  Image.h  Performance.cpp  Performance.h  Shader.cpp  Syslog.cpp  Syslog.h  Texture.cpp  Window.cpp  main.cpp
src/: CMakeLists.txt  Font.cpp  Font.h  Framebuffer.cpp  Image.cpp  Shader.h  Syslog.cpp  Syslog.h  Texture.h  UI.cpp  VAO.cpp  VAO.h  Window.h  main.cpp
src/3dMath/: 3dMath.h  quat.h
stE_refactored/source_code/: Basics.h  Graphics.cpp  Graphics.h  load_test.json  stE-rework.cpp
(+36 files in other folders)
